@@ -37,6 +37,8 @@ Alien::Build::Plugin::Extract::Libarchive      = 0.01
 Alien::Build::Plugin::Fetch::Cache             = 0.04
 Alien::Build::Plugin::Probe::GnuWin32          = 0.59
 Alien::Build::Plugin::Probe::Override          = 0.03
+Alien::Build::Plugin::Fetch::HostAllowList     = 0.01
+Alien::Build::Plugin::Fetch::HostBlockList     = 0.01
 Alien::Build::Plugin::Fetch::Prompt            = 0.60
 Alien::Build::Plugin::Fetch::Rewrite           = 0.02
 Alien::castxml                                 = 0.01
